Split annotations into independent projects