@@ -1,40 +1,70 @@
 apply plugin: "java-library"
 
-sourceSets.main.java.srcDirs = ["src/main/java/","mindustrySrc/","annotations/build/generated/sources/annotationProcessor/java/main"]
+//sourceSets.main.java.srcDirs = ["src/main/java/","annotations/build/generated/sources/annotationProcessor/java/main"]
 sourceSets.main.resources.srcDirs = ["src/main/resources/"]
-//tasks.withType(JavaCompile){
-//    targetCompatibility = 8
-//    sourceCompatibility = JavaVersion.VERSION_16
-//    options.encoding = "UTF-8"
-//    options.compilerArgs += ["-Xlint:deprecation"]
-//    options.compilerArgs.addAll(['--release', '8'])
-//
-//    options.forkOptions.jvmArgs += [
-//            '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-//            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-//            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
-//            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
-//            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
-//            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-//            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-//            '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
-//    ]
-//}
+
 mindustryModCore{
     setupAnnotationProject()
 }
-dependencies{
-    implementation 'commons-io:commons-io:2.5'
-    implementation 'com.squareup:javapoet:1.12.1'
-    implementation arcModule('arc-core')
-    implementation mindustryModule("core")
-    implementation "com.github.javaparser:javaparser-symbol-solver-core:$jparcerVersion"
 
-    compileOnly project(":annotations:localAnnotations")
-    annotationProcessor project(":annotations:localAnnotations")
-    compileOnly 'org.projectlombok:lombok:1.18.30'
-    annotationProcessor 'org.projectlombok:lombok:1.18.30'
-    compileOnly("org.jetbrains:annotations:24.0.1")
-    implementation 'org.reflections:reflections:0.10.2'
-//    annotationProcessor 'com.github.Anuken:jabel:0.9.0'
+subprojects{
+    tasks.withType(JavaCompile){
+        targetCompatibility = 8
+        sourceCompatibility = 8
+        options.fork = true
+    }
+    apply plugin: "java-library"
+    sourceSets.main.java.srcDirs = ["src/main/java"]
+    sourceSets.main.resources.srcDirs = ["src/main/resources/"]
+}
+configure(subprojects-aproj(":annotations:localAnnotations")){
+    println("it: "+project)
+    mindustryModCore{
+        setupAnnotationProject()
+    }
+}
+configure(aproj(":annotations:mindustry")){
+    dependencies{
+        api arcModule('arc-core')
+        api 'com.squareup:javapoet:1.12.1'
+    }
+}
+configure(aproj(":annotations:common")){
+    dependencies{
+        api 'org.reflections:reflections:0.10.2'
+        compileOnly project(":annotations:localAnnotations")
+        annotationProcessor project(":annotations:localAnnotations")
+    }
+}
+Set<Project> otherProject =
+        subprojects -
+                aproj(":annotations:mindustry") -
+                aproj(":annotations:common") -
+                aproj(":annotations:localAnnotations")
+configure(subprojects - aproj(":annotations:mindustry")- aproj(":annotations:localAnnotations")){
+    dependencies{
+        compileOnly 'org.projectlombok:lombok:1.18.30'
+        annotationProcessor 'org.projectlombok:lombok:1.18.30'
+        compileOnly "org.jetbrains:annotations:24.0.1"
+
+
+        api aproj(":annotations:mindustry")
+        api 'commons-io:commons-io:2.5'
+        api 'com.squareup:javapoet:1.12.1'
+        api arcModule('arc-core')
+        api mindustryModule("core")
+        api "com.github.javaparser:javaparser-symbol-solver-core:$jparcerVersion"
+    }
+}
+
+
+configure(otherProject){
+    dependencies{
+
+        api aproj(":annotations:common")
+        implementation 'com.squareup:javapoet:1.12.1'
+        implementation arcModule('arc-core')
+        implementation mindustryModule("core")
+        implementation "com.github.javaparser:javaparser-symbol-solver-core:$jparcerVersion"
+    }
 }
